# node-native-dialog-open-file

./: .gitignore  Cargo.toml  README.md  gulpfile.ts  package-lock.json  package.json
src/example/: main.ts
src/lib/: open-file.ts
src/lib/native/: index.d.ts  lib.rs
src/native/: lib.rs  qt.rs
src/test/: qt.spec.ts
